Fix scrollbar in layers panel

--- a/quickview/app.css
+++ b/quickview/app.css
@@ -86,7 +86,6 @@ body {
   background-color: #FFF;
 }
 .layer-list-list {
-  height: 100%;
   padding-top: 56px !important;
 }
 
